[project]
name = "thesis-llm-app"
version = "0.1.0"
description = "LLM app for thesis project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "problog>=2.2.7,<3.0.0",
  "matplotlib",
  "pandas>=2.3.3,<3.0.0",
  "numpy>=2.3.3,<3.0.0",
  "transformers>=4.57.1,<5.0.0",
  "torch>=2.9.0,<3.0.0",
  "accelerate>=1.10.1,<2.0.0",
  "huggingface-hub[cli]>=0.35.3,<0.36.0",
  "pyarrow>=21.0.0,<22.0.0",
  "bitsandbytes>=0.48.2,<0.49.0",
  "sentence-transformers>=5.1.2,<6.0.0",
  "scikit-learn>=1.7.2,<2.0.0",
  "deepproblog>=2.0.6,<3.0.0",
  "rank-bm25>=0.2.2,<0.3.0",
  "nltk>=3.9.2,<4.0.0",
  "absl-py>=2.4.0,<3.0.0",
  "gensim>=4.4.0,<5.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "nbconvert>=7.17.0,<8.0.0",
  "mlflow[genai]<3.10.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.uv]
# Optional uv-specific settings go here.
# You can leave this empty or omit it entirely.


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
# Linter options moved into the `lint` subsection (preferred)

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "F403", "F405", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.hatch.build.targets.wheel]
# Replace with your package path; common options:
# - `src/thesis_llm_app` if you use a src layout
# - `thesis_llm_app` if the package is at project root
packages = ["llm_bayesian_reasoning"]